@@ -67,6 +67,10 @@ What's new in Sudo 1.7.5?
    by the "sudoers_locale" setting ("C" by default).  Email send by
    sudo now includes MIME headers when "sudoers_locale" is not "C".
 
+ * The configure script has a new option, --disable-env-reset, to
+   allow one to change the default for the sudoers Default setting
+   "env_reset" at compile time.
+
 What's new in Sudo 1.7.4p6?
 
  * A bug has been fixed in the I/O logging support that could cause
